--- a/languages/baltic.pot
+++ b/languages/baltic.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Baltic 1.0.0\n"
 "Report-Msgid-Bugs-To: https://elevate360/contact\n"
-"POT-Creation-Date: 2018-01-11 08:52:21+00:00\n"
+"POT-Creation-Date: 2018-01-16 19:44:54+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -230,7 +230,7 @@ msgid "Elevate Themes"
 msgstr ""
 
 #: inc/admin/sections/add-ons.php:27
-msgid "Elevate Elements"
+msgid "Kit Elements"
 msgstr ""
 
 #: inc/admin/sections/add-ons.php:28
